--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,12 @@
+[bumpversion]
+current_version = 0.1.1
+commit = True
+tag = True
+
+[bumpversion:file:setup.py]
+
 [bdist_wheel]
 universal = 1
-
 
 [flake8]
 max-line-length = 140
@@ -9,18 +15,17 @@ exclude = */migrations/*
 [tool:pytest]
 testpaths = tests
 norecursedirs =
-    migrations
-
+	migrations
 python_files =
-    test_*.py
-    *_test.py
-    tests.py
+	test_*.py
+	*_test.py
+	tests.py
 addopts =
-    -ra
-    --strict
-    --doctest-modules
-    --doctest-glob=\*.rst
-    --tb=short
+	-ra
+	--strict
+	--doctest-modules
+	--doctest-glob=\*.rst
+	--tb=short
 
 [isort]
 force_single_line = True
@@ -30,3 +35,4 @@ default_section = THIRDPARTY
 forced_separate = test_sanic-statsd
 not_skip = __init__.py
 skip = migrations
+
